<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MemoryGame</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="done">Tiradas realizadas:</string>
    <string name="left">Tiradas restantes:</string>
    <string name="rightPick">Numero de aciertos:</string>
    <string name="changeBg">Cambiar fondo</string>
    <string name="diff">Cambiar dificultad:</string>
    <string name="diff16">16</string>
    <string name="diff20">20</string>
    <string name="diff12">12</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_third">ThirdActivity</string>
    <string name="settings">Configuracion</string>
    <string name="changeBk">Cambiar fondo</string>
    <string name="set">Hecho</string>
    <string name="back1">Fondo 1</string>
    <string name="back2">Fondo 2</string>
    <string name="ret">Aceptar</string>
    <string name="rights">Aciertos</string>

</resources>
