<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ThirdActivity" >

    <TextView
        android:id="@+id/textViewDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/diff"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:textSize="7pt" />

    <Button
        android:id="@+id/button12Cards"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button16Cards"
        android:layout_alignBottom="@+id/button16Cards"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/diff12" />

    <Button
        android:id="@+id/button16Cards"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/button12Cards"
        android:text="@string/diff16" />

    <Button
        android:id="@+id/button20Cards"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button16Cards"
        android:layout_alignBottom="@+id/button16Cards"
        android:layout_toRightOf="@+id/button16Cards"
        android:text="@string/diff20" />

    <TextView
        android:id="@+id/textViewHola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  "
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonDone"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/set" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewHola"
        android:layout_below="@+id/textViewHola"
        android:layout_marginTop="22dp"
        android:text="@string/diff"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="7pt" />

</RelativeLayout>